finally i could solve the terrible bug for invisibility style thanks GOD

--- a/css/layout.css
+++ b/css/layout.css
@@ -227,10 +227,11 @@ a {
   height: 20rem;
   padding: 3rem;
   border-radius: 1.5rem;
-  visibility: show;
-  opacity: 1;
+  visibility: hidden;
+  opacity: 0;
   transition: all 0.3s ease-in-out;
 }
+
 .github_info--left {
   display: flex;
   justify-content: space-around;
